--- a/environment.yml
+++ b/environment.yml
@@ -8,9 +8,11 @@ dependencies:
   - cudatoolkit=9.0
   - flake8=3.7.7
   - gpustat
+  - ipdb=0.12.3
   - matplotlib=3.0.3
   - numpy=1.16.3
   - pandas=0.24.2
+  - pdbpp=0.10.0
   - pillow=6.0.0
   - phantomjs
   - pytest=4.4.1
